{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 284,
  "lineage": "ea128491-fc67-6547-4918-a62833b9f5cb",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:555732532786:loadbalancer/app/myapp-load-balancer/74a2fb0eccab8a08",
            "arn_suffix": "app/myapp-load-balancer/74a2fb0eccab8a08",
            "dns_name": "myapp-load-balancer-1903940942.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:555732532786:loadbalancer/app/myapp-load-balancer/74a2fb0eccab8a08",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myapp-load-balancer",
            "security_groups": [
              "sg-00c151840a2000d23"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b4fa2e1d15f8275d"
              },
              {
                "subnet_id": "subnet-0c3c6312b750d1c47"
              }
            ],
            "subnets": [
              "subnet-0b4fa2e1d15f8275d",
              "subnet-0c3c6312b750d1c47"
            ],
            "tags": {
              "Name": "main-alb"
            },
            "vpc_id": "vpc-0a23ccef1a90ecc08",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.alb.aws_security_group.lb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:555732532786:listener/app/myapp-load-balancer/74a2fb0eccab8a08/be9d700c8ddc15f8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:555732532786:targetgroup/myapp-target-group/8d56979df02969be",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:555732532786:listener/app/myapp-load-balancer/74a2fb0eccab8a08/be9d700c8ddc15f8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:555732532786:loadbalancer/app/myapp-load-balancer/74a2fb0eccab8a08",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.main",
            "module.alb.aws_alb_target_group.app",
            "module.alb.aws_security_group.lb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:555732532786:targetgroup/myapp-target-group/8d56979df02969be",
            "arn_suffix": "targetgroup/myapp-target-group/8d56979df02969be",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:555732532786:targetgroup/myapp-target-group/8d56979df02969be",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "myapp-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a23ccef1a90ecc08"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:555732532786:security-group/sg-00c151840a2000d23",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c151840a2000d23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myapp-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "555732532786",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0a23ccef1a90ecc08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:555732532786:security-group/sg-001d4f960e225244f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001d4f960e225244f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-security-eu-west-1",
            "name_prefix": "",
            "owner_id": "555732532786",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0a23ccef1a90ecc08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0889e3219baf51fa0",
            "domain": "vpc",
            "id": "eipalloc-01e92ee7f7d36bed2",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0e3e284f28a49435f",
            "private_dns": "ip-10-0-2-47.eu-west-1.compute.internal",
            "private_ip": "10.0.2.47",
            "public_dns": "ec2-54-195-180-172.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.195.180.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0fd6fc720603b62c7",
            "domain": "vpc",
            "id": "eipalloc-07997f2f26bde745a",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-074cebef1d6efb520",
            "private_dns": "ip-10-0-3-191.eu-west-1.compute.internal",
            "private_ip": "10.0.3.191",
            "public_dns": "ec2-52-31-211-119.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.31.211.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:555732532786:internet-gateway/igw-003cb5356a9829530",
            "id": "igw-003cb5356a9829530",
            "owner_id": "555732532786",
            "tags": {
              "Name": "tf-igw"
            },
            "vpc_id": "vpc-0a23ccef1a90ecc08"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e92ee7f7d36bed2",
            "id": "nat-02845fd4d1d7c1138",
            "network_interface_id": "eni-0e3e284f28a49435f",
            "private_ip": "10.0.2.47",
            "public_ip": "54.195.180.172",
            "subnet_id": "subnet-0c3c6312b750d1c47",
            "tags": {
              "Name": "nat-gw-1"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07997f2f26bde745a",
            "id": "nat-097b0ebc88f3887de",
            "network_interface_id": "eni-074cebef1d6efb520",
            "private_ip": "10.0.3.191",
            "public_ip": "52.31.211.119",
            "subnet_id": "subnet-0b4fa2e1d15f8275d",
            "tags": {
              "Name": "nat-gw-2"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-003cb5356a9829530",
            "id": "r-rtb-0e25b738e0315e1111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e25b738e0315e111",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01aa8363b51a84fd3",
            "owner_id": "555732532786",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02845fd4d1d7c1138",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-1"
            },
            "vpc_id": "vpc-0a23ccef1a90ecc08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.gw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b49fae968bb18aaf",
            "owner_id": "555732532786",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-097b0ebc88f3887de",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-2"
            },
            "vpc_id": "vpc-0a23ccef1a90ecc08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.gw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e25b738e0315e111",
            "owner_id": "555732532786",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003cb5356a9829530",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "vpc_id": "vpc-0a23ccef1a90ecc08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef9a2513e4e9b719",
            "route_table_id": "rtb-01aa8363b51a84fd3",
            "subnet_id": "subnet-0bf9de0385381271f"
          },
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.gw",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a81f41d6189b75b0",
            "route_table_id": "rtb-0b49fae968bb18aaf",
            "subnet_id": "subnet-05a5e4b60552fcbe3"
          },
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.gw",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be43b979630b2a44",
            "route_table_id": "rtb-0e25b738e0315e111",
            "subnet_id": "subnet-0c3c6312b750d1c47"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e473de5bff60b51",
            "route_table_id": "rtb-0e25b738e0315e111",
            "subnet_id": "subnet-0b4fa2e1d15f8275d"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:555732532786:subnet/subnet-0bf9de0385381271f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0bf9de0385381271f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "555732532786",
            "tags": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0a23ccef1a90ecc08"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:555732532786:subnet/subnet-05a5e4b60552fcbe3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05a5e4b60552fcbe3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "555732532786",
            "tags": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0a23ccef1a90ecc08"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:555732532786:subnet/subnet-0c3c6312b750d1c47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c3c6312b750d1c47",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555732532786",
            "tags": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0a23ccef1a90ecc08"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:555732532786:subnet/subnet-0b4fa2e1d15f8275d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0b4fa2e1d15f8275d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555732532786",
            "tags": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0a23ccef1a90ecc08"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:555732532786:vpc/vpc-0a23ccef1a90ecc08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0afa76b37d7f37ade",
            "default_route_table_id": "rtb-01246f0893b32ca85",
            "default_security_group_id": "sg-0a50c5447ea91390c",
            "dhcp_options_id": "dopt-978a81f1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a23ccef1a90ecc08",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01246f0893b32ca85",
            "owner_id": "555732532786",
            "tags": {
              "Name": "vpc-main"
            }
          }
        }
      ]
    }
  ]
}